--- a/digitizing/package.json
+++ b/digitizing/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^2.27.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "prisma": "^2.27.0",
+    "typescript": "^4.3.5"
   }
 }
