--- a/digitizing/package.json
+++ b/digitizing/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@prisma/client": "^2.27.0",
+    "axios": "^0.21.1",
     "framer-motion": "^4",
     "next": "11.0.1",
     "react": "17.0.2",
