--- a/digitizing/package.json
+++ b/digitizing/package.json
@@ -15,10 +15,13 @@
     "@emotion/styled": "^11",
     "@prisma/client": "^2.27.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "framer-motion": "^4",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^3.0.3",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.3.2",
